<resources>
    <string name="app_name">Mulven</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="privacy"><u>privacy policy &amp;</u></string>
    <string name="terms_and_conditions"><u>I accept terms and conditions</u></string>
    <string name="i_accept">I accept </string>
    <string name="html"><h3 style="margin: 0px 0px 15px; padding: 0px; -webkit-font-smoothing: antialiased; font-size: 18px; color: rgb(34, 34, 34); font-weight: 600; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; background-color: rgb(241, 243, 245);" class="section-head">Specification:</h3>
        <table style="margin: 0px 0px 15px; padding: 0px; -webkit-font-smoothing: antialiased; background-color: rgb(241, 243, 245); width: 847px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;" cellpadding="0" cellspacing="0" class="data-table">
        <col style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased;" />
        <col style="margin: 0px; padding: 0px 30px; -webkit-font-smoothing: antialiased; width: 0px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name" />
        <col style="margin: 0px; padding: 0px 30px; -webkit-font-smoothing: antialiased; width: 0px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value" />
        <thead style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased;">
            <tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);">
            <td style="margin: 0px; padding: 10px 30px; -webkit-font-smoothing: antialiased; background: rgb(151, 161, 161); font-size: 15px; color: rgb(255, 255, 255); font-weight: 600;" class="heading-row" colspan="3">Basic Information</td></tr></thead>
            <tbody style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased;">
                <tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);">
                    <td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Processor</td>
                    <td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">Intel Core i7-8750H Processor (9M Cache, 2.20 GHz up to 4.10 GHz)Intel Core i7-8750H Processor (9M Cache, 2.20 GHz up to 4.10 GHz)Intel Core i7-8750H Processor (9M Cache, 2.20 GHz up to 4.10 GHz)Intel Core i7-8750H Processor (9M Cache, 2.20 GHz up to 4.10 GHz)Intel Core i7-8750H Processor  (9M Cache, 2.20 GHz up to 4.10 GHz)Intel Core i7-8750H Processor (9M Cache, 2.20 GHz up to 4.10 GHz)</td></tr>
                <tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Display</td>
                <td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value"> 15.6 Inch (16 : 9) 1920 x 1080 Full HD IPS Display (142ppi) 178° Viewing Angle, 300 nit, Contrast Ratio: 800: 1, Color Gamut: 72% 15.6 Inch (16 : 9) 1920 x 1080 Full HD IPS Display (142ppi) 178° Viewing Angle, 300 nit, Contrast Ratio: 800: 1, Color Gamut: 72% 15.6 Inch (16 : 9) 1920 x 1080 Full HD IPS Display (142ppi) 178° Viewing Angle, 300 nit, Contrast Ratio: 800: 1, Color Gamut: 72% 15.6 Inch (16 : 9) 1920 x 1080 Full HD IPS Display (142ppi) 178° Viewing Angle, 300 nit, Contrast Ratio: 800: 1, Color Gamut: 72%</td></tr>
                <tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Memory</td>
                    <td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">16GB (8GB x 2) DDR4 2666MHz RAM</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Storage</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">512GB NVMe SSD</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Graphics</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">NVIDIA GeForce GTX1060 6GB Graphics</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Operating System</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">Windows 10 Home</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Battery</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">4cell Li-ion polymer battery, 55Wh</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Adapter</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">AC Adapter, 100-240V</td></tr><tr style="margin: 0px; padding: 0px; -webkit-font-smoothing: antialiased; border-bottom: 1px solid rgb(225, 225, 225);"><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 212px; background: rgb(238, 238, 238); text-align: right; color: rgb(70, 68, 68); font-size: 13px; line-height: 35px; font-weight: 600;" class="name">Audio</td><td style="margin: 0px; padding-right: 30px; padding-left: 30px; -webkit-font-smoothing: antialiased; width: 635px; background: rgb(255, 255, 255); color: rgb(34, 34, 34); line-height: 22px;" class="value">Built-in AKG Speaker/Microphone</td></tr></tbody></table></string>
    <string name="description"><u>Product Details :</u></string>
    <string name="reason1">Ordered by mistake</string>
    <string name="reason2">Changed my mind</string>
    <string name="reason3">Entered wrong information</string>
    <string name="reason4">Selected wrong product variant</string>
    <string name="reason5">Want to buy form another seller</string>
    <string name="reason6">Other reason</string>
    <string name="aboutText">Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. Mulven is an online base e-commerce site. </string>
</resources>